--- a/worker/package.json
+++ b/worker/package.json
@@ -7,6 +7,9 @@
     "deploy": "wrangler deploy",
     "tail": "wrangler tail"
   },
+  "dependencies": {
+    "marked": "^15.0.0"
+  },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240117.0",
     "typescript": "^5.3.3",
