--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -2,6 +2,11 @@ name = "genesis"
 main = "src/index.ts"
 compatibility_date = "2024-01-01"
 
+# Bundle .md files as text
+rules = [
+  { type = "Text", globs = ["**/*.md"], fallthrough = true }
+]
+
 # Custom domain - configure in Cloudflare Dashboard
 # Workers & Pages → genesis → Settings → Triggers → Add Custom Domain
 # Add: genesis.hericl.es
